# credit-risk-underwriting-assistant

./: .env.example  .gitignore  GITHUB_ACTIONS.md  README.md
.github/workflows/: deploy-backend.yml  deploy-frontend.yml  terraform-destroy.yml  terraform.yml
app/: main.py
app/chains/: risk_chain.py
app/schemas/: applicant.py
docs/: dependency-injection-explained.md  github-actions-flow.md
infra/: .terraform.lock.hcl  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
infra/bootstrap/: main.tf
infra/modules/frontend/: main.tf  outputs.tf  variables.tf
infra/modules/lambda/: main.tf  outputs.tf  variables.tf
infra/modules/secrets/: main.tf  outputs.tf  variables.tf
src/backend/: lambda_handler.py  pyproject.toml
src/backend/app/: __init__.py  main.py  prompt.py  services.py  tools.py
src/frontend/: index.html  package-lock.json  vite.config.js
src/frontend/src/: App.css  App.jsx  index.css
src/frontend/src/components/: AnalysisResult.css  AnalysisResult.jsx  ApplicantForm.css  ApplicantForm.jsx  Header.css  Header.jsx
src/frontend/src/services/: api.js
