[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.123.10",
    "langchain>=1.1.2",
    "langchain-google-genai>=3.2.0",
    "langchain-nvidia-ai-endpoints>=1.0.0",
    "langgraph>=1.0.4",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.38.0",
    "mangum>=0.17.0",
    "boto3>=1.35.0",
]
